# eFlesh

./: .gitmodules  LICENSE  README.md  env.yml
characterization/: model.py  train.py
characterization/datasets/normal_force/20250401_014340_probe/: sensor.csv  sensor_post_baselines.csv  (+1 more)
microstructure/: conversion-docs.md
microstructure/matopt/: CMakeLists.txt  README.md
microstructure/matopt/cmake/: FindIPOPT.cmake  FindLIBIGL.cmake  MatoptDependencies.cmake  MatoptDownloadExternal.cmake
microstructure/matopt/scripts/: clean_tri_mesh.py  compute_cell_index.py  compute_quad_regularization_multipliers.py  compute_regularization_multipliers.py  connectivity_tools.py  generate_densities.py  lls_2D.py  material2geometry.py  material2geometry_angle.py  material_mesh_to_json.py  merge_meshes.py  paint_cutcell_boundary.py  paint_with_densities.py  paint_with_densities_offset.py  paths.py  plot_material_distribution.py  poly2man.py  quadmeshToGeometry.py  rotate_mesh.py  rotate_obj.py  split_for_stitching.py  test_parallel_offset.py  toptools.py  zpline.py  zpline_2D.py
microstructure/matopt/tools/material2geometry/: 0646_geo_1_coeffs.txt  0646_geo_2_coeffs.txt  homogenization.py  inflator.py  material2geometry.py  material2mesh.py
microstructure/microstructure_inflators/: CMakeLists.txt  README.md  SUMMARY.md  book.json  compile.sh  create_pouch.py  cut-cell.ipynb  data.json  extract-connected.py  generate_json.ipynb  regular.ipynb
microstructure/microstructure_inflators/cmake/: MicroDependencies.cmake  MicroDownloadExternal.cmake  MicroUtils.cmake  boost.cmake  openvdb.cmake  triangle.cmake
slip_detection/: README.md  conda_env.yml  requirements.txt  reskin_server.py  run.py  save_reskin_data.py  train.py  zmq_utils.py
slip_detection/checkpoints/handover/: eflesh_linear.pkl
slip_detection/configs/: config_eval.yaml  reskin.yaml  run_demo.yaml  run_handover_demo.yaml
slip_detection/configs/dataloader/: slip.yaml
slip_detection/configs/env_vars/: env_vars.yaml
slip_detection/data/: labels  seq_0.pt  seq_1.pt  seq_10.pt  seq_100.pt  seq_101.pt  seq_102.pt  seq_103.pt  seq_104.pt  seq_105.pt  seq_106.pt  seq_107.pt  seq_108.pt  seq_109.pt  seq_11.pt  seq_110.pt  seq_111.pt  seq_112.pt  seq_113.pt  seq_114.pt  seq_115.pt  seq_116.pt  seq_117.pt  seq_118.pt  seq_119.pt  seq_12.pt  seq_120.pt  seq_121.pt  seq_122.pt  seq_123.pt  seq_124.pt  seq_125.pt  seq_126.pt  seq_127.pt  seq_128.pt  seq_129.pt  seq_13.pt  seq_130.pt  seq_131.pt  seq_132.pt  (+98 more)
slip_detection/model/: lstm_model.py
slip_detection/notebooks/: visualize_data.ipynb  visualize_dataset.ipynb
slip_detection/robot/: controller.py
(+1358 files in other folders)
